[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dronecan>=1.0.27",
    "empy==3.3.4",
    "future>=1.0.0",
    "geocoder>=1.38.1",
    "lxml>=6.0.2",
    "mavproxy>=1.8.74",
    "packaging>=25.0",
    "pexpect>=4.9.0",
    "ptyprocess>=0.7.0",
    "pymavlink>=2.4.49",
    "pyserial>=3.5",
]
